# mutatio

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  LICENSE  MODULE.bazel  README.md  compose.yaml  conanfile.py
cmake/: Coverage.cmake  Format.cmake  Module.cmake  Test.cmake
mutatio/: BUILD.bazel  CMakeLists.txt
mutatio/include/mutatio/: location.h  location_exchange.h  location_view.h  location_view_exchange.h  status.h  units.h  variant_overloaded.h  velocity.h  velocity_exchange.h  velocity_view.h  velocity_view_exchange.h  wgs84.h
mutatio/src/: location_exchange.cc  location_view_exchange.cc  velocity_exchange.cc  velocity_view_exchange.cc
mutatio/tests/: location_exchange_test.cc  location_view_exchange_test.cc  velocity_exchange_test.cc  velocity_view_exchange_test.cc
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cc
tools/: check_format.sh  coverage.sh  format.sh
